	Added CoevolutionaryECSuite.java in coevolve2 to demonstrate the item above.
	Major modifications to GE package, thanks to Houston Mooers
		<hemooers@gmail.com>
	Added GPIndividual.printTrees(...) to help out GE
	Added out of range retries to polynomial mutation.
	Changed the parameter bounded-polynomial-version to alternative-polynomial-version	
		in FloatVectorSpecies
	Changed the variable outOfRangeRetries to outOfBoundsRetries in FloatVectorSpecies
	Added Evolve.primeGenerator() to prime the Mersenne Twister a bit.  MT's first
		624 numbers are generated using a simple linear congruential generator.
		Only after that does MT go through its first iteration.  Priming the
		generator pushes it through two iterations to guarantee more randomness.
		This is almost certainly cargo cult programming -- those first 624 numbers
		are generally reasonably good, but it doesn't hurt, so we're doing it.  Also
		modified locations in ECJ which create new MersenneTwisterFast objects to
		call Evolve.primeGenerator() whenever they do so.
	Reindented

21	Prerelease?  What Prerelease?
	Improvement on ParameterDatabase's error messages regarding classes missing
		no-argument (default) constructors, so they're indicated as such and not as
		"interfaces" or "abstract classes".  Thanks to J. Alejandro Zepada Cortes
		<jalejandrozepedac@gmail.com>
	Deleted some print junk in coevolve2
	Changed Fitness.trials to an ArrayList pointer
	Modified CompetitiveEvaluator.evalSingleElimination to consider ties so we don't
		have to.
	Addition of context to Fitness, and several new methods and revisions in Fitness,
		Individual, and Job which should make distributed evaluation work 
		propertly with coevolution.	
	Updated coevolve1 to revised approach
	Removed vestigial 'birthday' in Individual
	Modifications to coevolve2 to keep trial #0 as the "best" trial
	Manual updated to reflect new coevolution mechanism
	CoevolutionaryDoubleVectorIndividual deleted