@@ -24,38 +24,46 @@ eval.num-prev =                         2
 eval.select-current =                   ec.select.RandomSelection
 eval.select-prev =                      ec.select.RandomSelection
 
+generations=                            1000
+select.tournament.size =                2
 pop.subpops =                           2
+
 pop.subpop.0 =                          ec.Subpopulation
-pop.subpop.0.duplicate-retries =        10
-pop.subpop.0.size =                     16
+pop.subpop.0.duplicate-retries =        2
+pop.subpop.0.size =                     500
 pop.subpop.0.species =                  ec.vector.FloatVectorSpecies
 pop.subpop.0.species.crossover-type =   one
-pop.subpop.0.species.genome-size =      5
+pop.subpop.0.species.genome-size =      50
 pop.subpop.0.species.fitness =          ec.simple.SimpleFitness
-pop.subpop.0.species.ind =              ec.app.coevolve2.CoevolutionaryDoubleVectorIndividual
+pop.subpop.0.species.ind =              ec.vector.DoubleVectorIndividual
 pop.subpop.0.species.min-gene =         -5.12
 pop.subpop.0.species.max-gene =         5.12
 pop.subpop.0.species.pipe =             ec.vector.breed.VectorMutationPipeline
 pop.subpop.0.species.mutation-type =    gauss
-pop.subpop.0.species.mutation-stdev =   0.25
-pop.subpop.0.species.mutation-prob =    0.95
-pop.subpop.0.species.pipe.source.0 =            ec.select.TournamentSelection
-pop.subpop.0.species.pipe.source.0.size =       2
+pop.subpop.0.species.mutation-stdev =   0.01
+pop.subpop.0.species.mutation-prob =    1.0
+pop.subpop.0.species.mutation-bounded = true
+pop.subpop.0.species.pipe.source.0 =    ec.vector.breed.VectorCrossoverPipeline
+pop.subpop.0.species.pipe.source.0.source.0 = ec.select.TournamentSelection
+pop.subpop.0.species.pipe.source.0.source.1 = same
+
 
 pop.subpop.1 =                          ec.Subpopulation
-pop.subpop.1.duplicate-retries =        10
-pop.subpop.1.size =                     16
+pop.subpop.1.duplicate-retries =        2
+pop.subpop.1.size =                     500
 pop.subpop.1.species =                  ec.vector.FloatVectorSpecies
 pop.subpop.1.species.crossover-type =   one
-pop.subpop.1.species.genome-size =      5
+pop.subpop.1.species.genome-size =      50
 pop.subpop.1.species.fitness =          ec.simple.SimpleFitness
-pop.subpop.1.species.ind =              ec.app.coevolve2.CoevolutionaryDoubleVectorIndividual
+pop.subpop.1.species.ind =              ec.vector.DoubleVectorIndividual
 pop.subpop.1.species.min-gene =         -5.12
 pop.subpop.1.species.max-gene =         5.12
 pop.subpop.1.species.pipe =             ec.vector.breed.VectorMutationPipeline
 pop.subpop.1.species.mutation-type =    gauss
-pop.subpop.1.species.mutation-stdev =   0.25
-pop.subpop.1.species.mutation-prob =    0.95
-pop.subpop.1.species.pipe.source.0 =            ec.select.TournamentSelection
-pop.subpop.1.species.pipe.source.0.size =       2
+pop.subpop.1.species.mutation-stdev =   0.01
+pop.subpop.1.species.mutation-prob =    1.0
+pop.subpop.1.species.mutation-bounded = true
+pop.subpop.1.species.pipe.source.0 =    ec.vector.breed.VectorCrossoverPipeline
+pop.subpop.1.species.pipe.source.0.source.0 = ec.select.TournamentSelection
+pop.subpop.1.species.pipe.source.0.source.1 = same
 
